[package]
name = "get_input"
version = "0.1.1"
edition = "2018"
description = "Basic functionality in Rust for Test"
license = "MIT OR Apache-2.0"
authors = ["Chandan Bhagat <chandan.bhagat@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
